# SqliteFtpBackup

./: CMakeLists.txt  README.md
DB/: backup.db_2025-09-22_19-23-19.sqlite
FTP/: backup.db_backup_2025-09-22_19-23-22.sqlite
console/: main.cpp
include/: FtpUploader.h  Logger.h  SqliteHelper.h
src/: FtpUploader.cpp  SqliteHelper.cpp
tests/: CMakeLists.txt  FtpUploaderTests.cpp  LoggerTests.cpp  SqliteHelperTests.cpp
